# master

./: .gitignore  README.md  helloWorld.c
ASC/: whales.r
MEP/trabalho_final/: frase_busca
Obelheiro/: README.md  blockchainPKI.md  obelheiro-leituras.md
Obelheiro/estagio/: estagio_blockchain_tenfen.pptx
Obelheiro/microservice/: README.md
Obelheiro/pbs/: keywords.txt
Obelheiro/pesquisa/: 80_1_truth.doc  PG142e_Solicitaco_de_Prorrogacao_de_Prazo_RafaelTenfen_9_meses.docx  artigo_raflix.docx
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader/: Cargo.toml
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader/src/: main.rs  pcap_packet.rs
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader/src/pcap_packet/: pcap_chargen.rs  pcap_dns.rs  pcap_frame.rs  pcap_ip.rs  pcap_ntp.rs  pcap_ssdp.rs  pcap_udp.rs
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader_pcap_parser/: .gitignore  Cargo.toml  wth.txt
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader_pcap_parser/src/: database.rs  main.rs  pcap.rs  print.rs
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader_pcap_parser/src/pcap/: attack.rs  block.rs
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader_pcap_parser/src/pcap/block/: dns.rs  frame.rs  ip.rs  ldap.rs  ntp.rs  udp.rs
Obelheiro/pesquisa/honeypot_data/rust/pcap_reader_pcap_parser/src/pcap_packet/: pcap_chargen.rs  pcap_ssdp.rs  pcap_udp.rs
PAA/: main.c
PAA/PAA_analise/: BubbleSort.c  DataHora.c  InsertionSort.c  Rand.c  SRand.c  SelectionSort.c  bubbleSort  insertionSort  selectionSort
PAA/danilo/: Makefile  README.txt  Stack.c  Stack_Private.h  Stack_Public.h  aplicacao  aplicacao.c
PAA/douglas_macedo/: Pilha.c  Pilha_interface.h  Pilha_privado.h  README.md  lista_palavras.txt  main  main.c  main.h
PAA/douglas_macedo_v0/: Pilha.c  lista_palavras.txt  main  main.c  makefile
PAA/felipe/: README  aplicacao  aplicacao.c  pilha.c  pilha_interface.h  pilha_privado.h
PAA/fila_dinamica/: Fila.c  Fila_privada.h  Fila_publica.h  Makefile  README.md  fila_dinamica.tar.xz  main  main.c
PAA/pilha/: Makefile  README.md  aplicacao  aplicacao.c  biblioteca_pilha.tar.xz  pilha.c  pilha_privado.h  pilha_publico.h
PAA/pilha4_gabriela/: README.md  README.txt  aplicacao  aplicacao.c  main  main.c  main.h  palavras.txt  pilha.c  pilha.tar.xz  pilha_interface.h  pilha_privado.h  pilha_stack.tar.xz
PAA/pilha4_gabriela_z/: Makefile  main  main.c  main.h  palavras.txt  pilha_privado.h
PAA/pilha_do_sergio/: Makefile  README.md  aplicacao  main.c  pilha_privado.h  pilha_publico.h
PAA/pilha_marcos/: LEIAME.txt  Makefile  Pilha.c  Pilha_interface.h  Pilha_privado.h  main  main.c  palavras_aleatorias.txt
PAA/prova/: Makefile  main  main.c
PAA/taynara/: Makefile  READ ME  aplicacao  aplicacao.c  pilha.c  pilhaPublico.h
PAA/test_1/: main  main.c
PPA/: test.c
PPA/basic/: switch.c
PPA/gprof/: dotprod_seq.c  teste  teste1
PPA/mandelbrot/: Makefile  mandelbrot  mandelbrot.cpp
PPA/matrix/: README.md  main  main.c  matriz.c  matriz.h
PPA/opemMP/: Makefile  for.c  main.c  program
PPA/perfect_number/: .gitignore  Makefile  README.md  data.csv  data_cct copy.csv  data_cct.csv  data_cct_mpi copy 2.csv  data_cct_mpi.csv  data_cct_mpi_openmp.csv  data_cct_mpiopenmp.csv  data_cct_mpiopenmp_1111_omp_get_num_procs.csv  data_cct_mpiopenmp_2222.csv  data_cct_mpiopenmp_4444.csv  datampi.csv  generate_mpi_openmp  generate_perfect_numbers_mpi_openmp.tar.xz  generate_perfect_numbers_openmp_v1.tar.xz  generate_perfect_numbers_openmp_v2.tar.xz  generate_perfect_numbers_openmp_v3.tar.xz  generate_perfect_numbers_openmp_v4.tar.xz  generate_perfect_numbers_parallel.tar.xz  generate_sequen  generateexcel.sh  generateexcelmpi.sh  generateexcelmpi1.sh  generateexcelmpi16.sh  generateexcelmpiopenmp.sh  hardware_info.txt  hosts_file  main.c  main_mpi.c  main_mpi_openmp.c  (+7 more)
REC/: PetFeederDiagram.drawio  automatic_feeder.drawio  exercicios.md  prova
SDA/: PerguntasTrabalhoDupla.md
basic/: functionProcedure.c
go-gallon/: .gitignore  Makefile  rules.mk
pointer/: ponteiro.c
(+213 files in other folders)
