[package]
name = "pcap_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtshark = "2.3.1"
rusqlite = { version = "0.28.0", features = ["bundled"]}
cidr = { version = "0.2.0" }
cidr-utils = { version = "0.5.7" }
chrono = { version = "0.4.22" }
pcap-parser = { version = "0.14.0" }
