[package]
name = "pcap_reader_pcap_parser"
version = "0.1.0"
edition = "2021"


# [workspace]
# members = [
#   "pcap-analyzer"
# ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rtshark = "2.3.1"
rusqlite = { version = "0.28.0", features = ["bundled"]}
# cidr = { version = "0.2.0" }
# cidr-utils = { version = "0.5.7" }
# chrono = { version = "0.4.22" }
pcap-parser = { version = "0.14.0", features = ["data"] }
# circular = { version = "0.3.0" }
# packet = { version = "0.1.4" } # 0.1
ntp-parser = { version = "0.6" }
ldap-parser = { version = "0.3" }
pktparse = { version = "0.7.1" }
dnslogger = { path = "./dnslogger" } # giving error // need to install libpcap-dev
dns-parser = { version = "0.8.0" }
libpcap-tools = { path = "./pcap-analyzer-2/libpcap-tools" }
etherparse = { version = "0.12.0" }
chrono = { version = "0.4.22" }
cidr-utils = { version = "0.5.7" }
# snoopy = { version = "0.3.2" } # giving error
# pcap-analyzer = { path = "/home/rafilx/projects/github.com/RafilxTenfen/master/Obelheiro/pesquisa/honeypot_data/rust/pcap_reader_pcap_parser/pcap-analyzer" }

